# icreate

./: .gitignore  CMakeLists.txt  README.md  iTunesArtwork  makefile
Payload/GeometryJump.app/: AchievementsDesc.plist  AchievementsDescMD.plist  AchievementsLiteDesc.plist  Assets.car  BlackSludge_AnimDesc.plist  CCControlColourPickerSpriteSheet-hd.plist  CCControlColourPickerSpriteSheet.plist  DungeonSheet-hd.plist  DungeonSheet.plist  FireSheet_01-hd.plist  FireSheet_01.plist  GJBeast01_AnimDesc.plist  GJBeast02_AnimDesc.plist  GJBeast03_AnimDesc.plist  GJBeast04_AnimDesc.plist  GJShopKeeper2_AnimDesc.plist  GJShopKeeper3_AnimDesc.plist  GJShopKeeper_AnimDesc.plist  GJ_GameSheet-hd.plist  GJ_GameSheet.plist  GJ_GameSheet02-hd.plist  GJ_GameSheet02.plist  GJ_GameSheet03-hd.plist  GJ_GameSheet03.plist  GJ_GameSheet04-hd.plist  GJ_GameSheet04.plist  GJ_GameSheetGlow-hd.plist  GJ_GameSheetGlow.plist  GJ_LaunchSheet-hd.plist  GJ_LaunchSheet.plist  GJ_ShopSheet-hd.plist  GJ_ShopSheet.plist  GauntletSheet-hd.plist  GauntletSheet.plist  GeometryJump.crc  Info.plist  LevelData.plist  LoadData.plist  Locophone-ICPDA  PlayerExplosion_01-hd.plist  (+88 more)
Payload/GeometryJump.app/_CodeSignature/: CodeResources  ResourceRules
hook/: AntiPiracy.h  AntiPiracy.m  CMakeLists.txt  SongBypass.h  SongBypass.m  hook.dylib  ioslib.h  ioslib.mm  main.mm  makefile
hook/CacaoTouch/: cc_defs.hpp
hook/CacaoTouch/lib/: addrs.cpp
